--- a/themes/barba/layout/components/docs/_docs-nav.scss
+++ b/themes/barba/layout/components/docs/_docs-nav.scss
@@ -7,7 +7,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  padding-top: 14rem;
+  overflow-y: auto;
+  padding: 14rem 0;
   background: $c-blue-lightest;
   transition: transform 0.3s $ease-out-quad;
 
@@ -22,6 +23,17 @@
     &.is-open {
       transform: translateX(0);
     }
+  }
+
+  &::before {
+    content: '';
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: inherit;
+    height: 14rem;
+    background: linear-gradient(to bottom, $c-blue-lightest, 97%, transparent);
   }
 }
 
